Unable to set follow-up flag without a due date.
I use both an IMAP and an EWS connection to my office 365 account within evolution (and other apps on phone and tablet). On evolution imap, when I mark/unmark an email as important, it shows up in EWS as follow up without a date. It shows up the same in the outlook web app and android app.
If I flag the email for follow up in the outlook web app or android one, it will show up as important in the evolution imap interface.
All of that works as expected, but here is the problem. If I flag the email in the evolution ews interface, either from the context menu "Mark for follow up..." and selecting None for due date, or clicking on the follow up flag column (after adding it), then in both cases it ends up being a follow with the due date of the time it was selected and shows up as overdue. I think because of that, the email does not show up as important in the imap interface.
Steps to reproduce:
- Either right click and email and select "Mark for follow up..." then select a due by date of None or click once in the follow up flag column (after adding the column if it was not there).
- wait a little, select some other emails and the come back to the flagged email
- It now shows up as overdue (with the date/time of the first step above)
What should happen:
- The email should stay as Follow-up (like the ones flagged with outlook web app or android app do.)
- It should show as important under the imap interface.
This is under Fedora 34: evolution-ews-3.40.4-1.fc34.x86_64