I#166 - Unable to set follow-up flag without a due date

Closes https://gitlab.gnome.org/GNOME/evolution-ews/-/issues/166